modified landing page

--- a/ui/index.html
+++ b/ui/index.html
@@ -40,9 +40,17 @@
                     </li>
                     <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">ABOUT</a>
                     </li>
-                    <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">LOGIN</a>
+                    <li><select class="selectpicker" data-live-search="true">
+                          <option data-effect="mfp-move-from-top" class="popup-text" >LOGIN</option>
+                          <option data-tokens="mustard"><a href="#">Seller</a></option>
+                          <option data-tokens="frosting"><a href="#">Buyer</a></option>
+                        </select>
                     </li>
-                    <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">SIGN UP</a>
+                    <li><select class="selectpicker" data-live-search="true">
+                          <option data-effect="mfp-move-from-top" class="popup-text" >SIGN UP</option>
+                          <option data-tokens="mustard"><a href="#">Seller</a></option>
+                          <option data-tokens="frosting"><a href="#">Buyer</a></option>
+                        </select>
                     </li>
                 </ul>
             </div>
