Added some changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -42,14 +42,14 @@
                     </li>
                     <li><select class="selectpicker" data-live-search="true">
                           <option data-effect="mfp-move-from-top" class="popup-text" >LOGIN</option>
-                          <option data-tokens="mustard"><a href="#">Seller</a></option>
+                          <option data-tokens="mustard"><a href="login_seller.html">Seller</a></option>
                           <option data-tokens="frosting"><a href="#">Buyer</a></option>
                         </select>
                     </li>
                     <li><select class="selectpicker" data-live-search="true">
                           <option data-effect="mfp-move-from-top" class="popup-text" >SIGN UP</option>
                           <option data-tokens="mustard"><a href="#">Seller</a></option>
-                          <option data-tokens="frosting"><a href="#">Buyer</a></option>
+                          <option data-tokens="frosting"><a href="signup_seller.html">Buyer</a></option>
                         </select>
                     </li>
                 </ul>
