--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="static/css/font-awesome.css">
   <link rel="stylesheet" href="static/css/styles.css">
   <link rel="stylesheet" href="static/css/mystyles.css">
+  <link rel="stylesheet" href="static/css/buyer.css">
 </head>
 <body>
   <div class="global-wrapper clearfix" id="global-wrapper">
