created login feature for buyer and get contacts

--- a/ui/common/content.html
+++ b/ui/common/content.html
@@ -1,6 +1,6 @@
 <div class="global-wrapper1 clearfix" id="global-wrapper1">
 
-
+    <div ng-include src="'common/header.html'"></div>
     <div class="wrapper">
       <img id="banner" src="static/img/backgrounds/banner.jpg"/>
     </div>
