--- a/ui/buyer/contacts/add_contacts.html
+++ b/ui/buyer/contacts/add_contacts.html
@@ -1,34 +1,41 @@
-<section class="content-header">
-    <h1>
-        Add Contact
-    </h1>
-</section>
+<div ng-include src="'../buyer/home.html'"></div>
+<div class="col-md-2"></div>
 
-<section class="content">
-    <form ng-submit="addContact()" class="form">
-        <div class="box box-solid">
-            <div class="box-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label>Number</label>
-                            <input class="form-control" type="text" ng-model="contact.c_number"/>
-                        </div>
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input class="form-control" type="text" ng-model="contact.name"/>
-                        </div>
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input class="form-control" type="text" ng-model="contact.l_name"/>
+<div class="col-md-10">
+    <div class="gap"></div>
+    <section class="content-header">
+        <h1>
+            Add Contact
+        </h1>
+    </section>
+
+    <section class="content">
+        <form ng-submit="addContact()" class="form">
+            <div class="box box-solid">
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Number</label>
+                                <input class="form-control" type="text" ng-model="contact.c_number"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input class="form-control" type="text" ng-model="contact.name"/>
+                            </div>
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input class="form-control" type="text" ng-model="contact.l_name"/>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Save">
+                <a href="#/buyer/contacts" class="btn btn-danger">Cancel</a>
             </div>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save">
-            <a href="#/dashboard/contacts" class="btn btn-danger">Cancel</a>
-        </div>
-    </form>
-</section>
+            </div>
+
+        </form>
+    </section>
+</div>
