--- a/ui/buyer/contacts/contacts.html
+++ b/ui/buyer/contacts/contacts.html
@@ -1,16 +1,20 @@
-<section class="content-header">
+<div ng-include src="'../buyer/home.html'"></div>
+<div class="col-md-2"></div>
+<div class="col-md-10">
+    <div class="gap"></div>
+    <section class="content-header">
     <h1>
         Contacts
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a href="#/buyer/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
         <li class="active">Contacts</li>
     </ol>
 </section>
 <section class="content">
     <div class="box">
         <div class="box-header with-border">
-            <a class="btn btn-default btn-mini btn btn-info" href="#/dashboard/contacts/add">Add New</a>
+            <a class="btn btn-default btn-mini btn btn-info" href="#/buyer/contacts/add">Add New</a>
         </div>
         <div class="gap"></div>
         <!-- /.box-header -->
@@ -31,7 +35,7 @@
                     <td>{{ contact.c_number}}</td>
                     <td>{{ contact.name }}</td>
                     <td>{{ contact.l_name }}</td>
-                    <td><a href="#/dashboard/contacts/{{ contact.contact_id }}">Edit</a></td>
+                    <td><a href="#/buyer/contacts/{{ contact.contact_id }}">Edit</a></td>
                 </tr>
                 </tbody>
             </table>
@@ -40,3 +44,4 @@
     </div>
 
 </section>
+</div>
