--- a/ui/buyer/login.html
+++ b/ui/buyer/login.html
@@ -1,20 +1,23 @@
 <div class="gap"></div>
-<div class="container">
+<div class="gap"></div>
+<div class="container" style="background-color: #1abc9c; ">
+
 	<section id="content">
 		<form action="">
-			<h1>Login Form</h1>
+			<h1>Buyer Login</h1>
             <br>
 			<div>
-				<input type="text" placeholder="E-mail" required="" id="username" />
+				<input type="text" placeholder="E-mail" required="" id="username" ng-model="username"/>
 			</div>
 			<div>
-				<input type="password" placeholder="Password" required="" id="password" />
+				<input type="password" placeholder="Password" required="" id="password" ng-model="password"/>
 			</div>
+			<br>
 			<div>
-				<input type="submit" value="Log in" />
+				<input type="button" ng-click="submit()" value="Login" class="btn btn-info"/>
+				<input type="button" onclick="window.location.replace('#/AgriSenso')" value="Cancel" class="btn btn-danger"/>
 				<a href="#">Forgot your password?</a>
 				<a href="#">Sign up</a>
-				<a href="../index.html">dashboard</a>
 			</div>
 		</form><!-- form -->
 	</section><!-- content -->
