--- a/ui/buyer/signup.html
+++ b/ui/buyer/signup.html
@@ -20,10 +20,10 @@
 				<input type="password" placeholder="Password" required="" id="password" />
 			</div>
             <div>
-				<input type="password" placeholder="Re-type Password" required="" id="password" />
+				<input type="password" placeholder="Re-type Password" required="" id="password2" />
 			</div>
 			<div>
-				<input type="submit" value="Sig Up" />
+				<input type="submit" value="Sign Up" />
 				<a href="#">Login</a>
 			</div>
 		</form><!-- form -->
