--- a/ui/index.html
+++ b/ui/index.html
@@ -20,77 +20,18 @@
   <link rel="stylesheet" href="static/font-awesome/css/font-awesome.css">
 </head>
 <body>
-  <div class="navbar-before mobile-hidden"></div>
-  <nav class="navbar navbar-inverse navbar-main yamm">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
-                        data-target="#main-nav-collapse" area_expanded="false"><span
-                        class="sr-only">Main Menu</span><span class="icon-bar"></span><span
-                        class="icon-bar"></span><span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html" style="padding:10px;">
-                    <img src="static/img/logo/Agrisenso.png" alt="AgriSenso" title="AgriSenso"/>
-                </a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="main-nav-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html" data-effect="mfp-move-from-top" class="popup-text">HOME</a>
-                    </li>
-                    <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">ABOUT</a>
-                    </li>
-                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 25px">
-                          <option data-effect="mfp-move-from-top" class="popup-text" >LOGIN</option>
-                          <option data-tokens="mustard"><a href="#">Seller</a></option>
-                          <option data-tokens="mustard" value="#/buyer/login">Buyer</option>
-                        </select>
-                    </li>
-                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 25px">
-                          <option data-effect="mfp-move-from-top" class="popup-text" >SIGN UP</option>
-                          <option data-tokens="mustard" value="seller/signup_seller.html">Seller</option>
-                          <option data-tokens="frosting" value="buyer/signup.html">Buyer</option>
-                        </select>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </nav>
-
   <div ng-view></div>
   <script src="static/js/jquery.js"></script>
-
   <script src="static/js/bootstrap.js"></script>
 
-  <script src="static/js/magnific.js"></script>
-  <script src="static/js/custom.js"></script>
-  <script src="static/js/jquery.js"></script>
-
-  <script src="static/js/bootstrap.js"></script>
-  <!--<script src="static/js/icheck.js"></script>-->
-  <!--<script src="static/js/ionrangeslider.js"></script>-->
-  <!--<script src="static/js/jqzoom.js"></script>-->
-  <!--<script src="static/js/card-payment.js"></script>-->
-  <!--<script src="static/js/owl-carousel.js"></script>-->
-  <!--<script src="static/js/magnific.js"></script>-->
-  <!--<script src="static/js/custom.js"></script>-->
-  <!---->
-  <!--<script src="static/js/angular-cookies.js"></script>-->
-  <!--<script src="static/js/angular-cookies.min.js"></script>-->
-  <!--<link href="static/js/AngularJS-Toaster/toaster.min.css" rel="stylesheet" />-->
-  <!--&lt;!&ndash;<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js" ></script>&ndash;&gt;-->
-  <!--<script src="static/js/angular-animate/angular-animate.js" ></script>-->
-  <!--<script src="static/js/AngularJS-Toaster/toaster.min.js"></script>-->
-  <!--&lt;!&ndash;***********************************&ndash;&gt;-->
   <script src="static/js/angular.min.js"></script>
-  <script src="static/lib/angular-resource/angular-resource.min.js"></script>
   <script src="static/js/angular-route.js"></script>
-  <script src="static/js/angular-route.min.js"></script>
-  <script src="static/js/angular-resource.js"></script>
+    <script src="static/lib/angular-resource/angular-resource.min.js"></script>
+
 
   <!--***********************************-->
   <script src="static/app/app.module.js"></script>
+  <script src="static/app/app.route.js"></script>
   <script src="static/app/app.route.js"></script>
   <script src="static/app/services/api.service.js"></script>
   <script src="static/app/controllers/buyer.controller.js"></script>
