Added changes for seller frontend

--- a/ui/seller/index.html
+++ b/ui/seller/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="MainApp">
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,37 +53,6 @@
               <img src="dist/img/portrait.png" class="user-image" alt="User Image">
               <span class="hidden-xs">Marjorie</span>
             </a>
-            <ul class="dropdown-menu">
-              <!-- User image -->
-              <li class="user-header">
-                <img src="dist/img/portrait.png" class="img-circle" alt="User Image">
-
-                <p>
-                  Marjorie Buctolan
-                </p>
-              </li>
-              <!-- Menu Body -->
-              <li class="user-body">
-                <div class="row">
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Location</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Sales</a>
-                  </div>
-                </div>
-                <!-- /.row -->
-              </li>
-              <!-- Menu Footer-->
-              <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
-                <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                </div>
-              </li>
-            </ul>
           </li>
           <!-- Control Sidebar Toggle Button -->
         </ul>
@@ -115,15 +84,15 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="index.html"></a></li>
+            <li><a href="dashboard.html"></a></li>
             <li>
                                 <li><a href="#" class=" hvr-bounce-to-right"> <i
                                         class="fa fa-male nav_icon"></i>My Profile</a></li>
-                                <li><a href="#/products" class=" hvr-bounce-to-right"> <i
+                                <li><a href="#/dashboard/products" class=" hvr-bounce-to-right"> <i
                                         class="fa fa-male nav_icon"></i>Products</a></li>
-                                <li><a href="#/addproducts" class=" hvr-bounce-to-right"><i
+                                <li><a href="#/dashboard/products/add" class=" hvr-bounce-to-right"><i
                                         class="fa fa-plus nav_icon"></i>Add Product</a></li>
-                                <li><a href="#" class=" hvr-bounce-to-right"><i
+                                <li><a href="#/dashboard/contacts" class=" hvr-bounce-to-right"><i
                                         class="fa fa-group nav_icon"></i>My Contacts</a></li>
           </ul>
             </li>
