--- a/ui/seller/login_seller.html
+++ b/ui/seller/login_seller.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>AgriSenso</title>
-      <link rel="stylesheet" href="../static/css/seller.css">
-</head>
-
-<body>
-<br><br><br>
 <div class="container">
     <section id="content">
         <form action="">
@@ -23,10 +13,8 @@
                 <input type="submit" value="Log in" />
                 <a href="#">Forgot your password?</a>
                 <a href="#">Sign up</a>
-                <a href="../index.html">dashboard</a>
+                <a href="seller/index.html">dashboard</a>
             </div>
         </form><!-- form -->
     </section><!-- content -->
 </div><!-- container -->
-</body>
-</html>
