Changed url for products

--- a/ui/index.html
+++ b/ui/index.html
@@ -40,13 +40,13 @@
                     </li>
                     <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">ABOUT</a>
                     </li>
-                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 25px">
+                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 20px">
                           <option data-effect="mfp-move-from-top" class="popup-text" >LOGIN</option>
-                          <option data-tokens="mustard"><a href="#">Seller</a></option>
+                          <option data-tokens="mustard" value="#/seller/login_seller">Seller</option>
                           <option data-tokens="mustard" value="#/buyer/login">Buyer</option>
                         </select>
                     </li>
-                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 25px">
+                    <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 20px">
                           <option data-effect="mfp-move-from-top" class="popup-text" >SIGN UP</option>
                           <option data-tokens="mustard" value="seller/signup_seller.html">Seller</option>
                           <option data-tokens="frosting" value="buyer/signup.html">Buyer</option>
