--- a/ui/buyer/contacts/add_contacts.html
+++ b/ui/buyer/contacts/add_contacts.html
@@ -17,22 +17,22 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Number</label>
-                                <input class="form-control" type="text" ng-model="contact.c_number"/>
+                                <input class="form-control" type="text" ng-model="new_c_number"/>
                             </div>
                             <div class="form-group">
                                 <label>Name</label>
-                                <input class="form-control" type="text" ng-model="contact.name"/>
+                                <input class="form-control" type="text" ng-model="new_name"/>
                             </div>
                             <div class="form-group">
                                 <label>Name</label>
-                                <input class="form-control" type="text" ng-model="contact.l_name"/>
+                                <input class="form-control" type="text" ng-model="new_l_name"/>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                 <input type="submit" class="btn btn-primary" value="Save">
-                <a href="#/buyer/contacts" class="btn btn-danger">Cancel</a>
+                <a href="#/buyer/dashboard/contacts" class="btn btn-danger">Cancel</a>
             </div>
             </div>
 
