--- a/ui/buyer/contacts/contacts.html
+++ b/ui/buyer/contacts/contacts.html
@@ -13,9 +13,42 @@
 </section>
 <section class="content">
     <div class="box">
-        <div class="box-header with-border">
-            <a class="btn btn-default btn-mini btn btn-info" href="#/buyer/contacts/add">Add New</a>
-        </div>
+
+        <!--<div class="box-header with-border">-->
+            <!--<a class="btn btn-default btn-mini btn btn-info" href="#/buyer/contacts/add">Add New</a>-->
+        <!--</div>-->
+        <section class="content">
+            <form ng-submit="addContact()" class="form">
+                <div class="box box-solid">
+                    <div class="box-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group col-md-3">
+                                    <label>Number</label>
+                                    <input class="form-control" type="text" ng-model="new_c_number" required/>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>Given Name</label>
+                                    <input class="form-control" type="text" ng-model="new_name" required/>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>Last Name</label>
+                                    <input class="form-control" type="text" ng-model="new_l_name" required/>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>Action</label>
+                                    <br>
+                                    <input type="submit" class="btn btn-primary" value="Save">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </section>
+
+
         <div class="gap"></div>
         <!-- /.box-header -->
         <div class="box-body">
