--- a/ui/buyer/home.html
+++ b/ui/buyer/home.html
@@ -12,10 +12,10 @@
          <div class="container">
              <ul class="nav navbar-right top-nav">
             <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+                <a href="#/" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
                 <ul class="dropdown-menu message-dropdown">
                     <li class="message-preview">
-                        <a href="">
+                        <a href="#/">
                             <div class="media">
                                 <span class="pull-left">
                                     <img class="media-object" src="http://placehold.it/50x50" alt="">
@@ -29,19 +29,19 @@
                         </a>
                     </li>
                     <li class="message-footer">
-                        <a href="#">Read All New Messages</a>
+                        <a href="#/">Read All New Messages</a>
                     </li>
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                <a href="#/" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
                 <ul class="dropdown-menu alert-dropdown">
                     <li>
-                        <a href="#">New product<span class="label label-default">New</span></a>
+                        <a href="#/">New product<span class="label label-default">New</span></a>
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a href="#">View All</a>
+                        <a href="#/">View All</a>
                     </li>
                 </ul>
             </li>
@@ -75,10 +75,10 @@
                     <a href="#/buyer/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                 </li>
                 <li>
-                    <a href="#/buyer/contacts"><i class="fa fa-fw fa-bar-chart-o"></i> Contacts</a>
+                    <a href="#/buyer/dashboard/contacts"><i class="fa fa-fw fa-bar-chart-o"></i> Contacts</a>
                 </li>
                 <li>
-                    <a href="#/buyer/products"><i class="fa fa-fw fa-table"></i> Products</a>
+                    <a href="#/buyer/dashboard/products"><i class="fa fa-fw fa-table"></i> Products</a>
                 </li>
             </ul>
         </div>
