--- a/ui/common/content.html
+++ b/ui/common/content.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="copyright-text">Copyright &copy; <a href="#">AgriSenso</a> 2016. All rights reseved</p>
+                    <p class="copyright-text">Copyright &copy; <a href="#/">AgriSenso</a> 2016. All rights reseved</p>
                 </div>
                 <div class="col-md-4"></div>
                 <div class="col-md-2 copyright-text">
