--- a/ui/common/header.html
+++ b/ui/common/header.html
@@ -14,9 +14,9 @@
 
             <div class="collapse navbar-collapse" id="main-nav-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html" data-effect="mfp-move-from-top" class="popup-text">HOME</a>
+                    <li><a href="#/AgriSenso" data-effect="mfp-move-from-top" class="popup-text">HOME</a>
                     </li>
-                    <li><a href="#" data-effect="mfp-move-from-top" class="popup-text">ABOUT</a>
+                    <li><a href="#/" data-effect="mfp-move-from-top" class="popup-text">ABOUT</a>
                     </li>
                     <li><select class="selectpicker" data-live-search="true" onchange="location = this.value" style="font-size: 18px">
                           <option data-effect="mfp-move-from-top" class="popup-text" >LOGIN</option>
