--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Buy/Sell and Guide platform for Farmers and potential farm products Buyer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--<link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400italic,400' rel='stylesheet' type='text/css'>--><link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="static/css/bootstrap.css">
@@ -20,9 +20,30 @@
   <link rel="stylesheet" href="static/font-awesome/css/font-awesome.css">
 </head>
 <body>
+  <toaster-container></toaster-container>
   <div ng-view></div>
   <script src="static/js/jquery.js"></script>
   <script src="static/js/bootstrap.js"></script>
+
+  <script src="static/js/icheck.js"></script>
+  <script src="static/js/ionrangeslider.js"></script>
+  <script src="static/js/jqzoom.js"></script>
+  <script src="static/js/card-payment.js"></script>
+  <script src="static/js/owl-carousel.js"></script>
+  <script src="static/js/magnific.js"></script>
+  <script src="static/js/custom.js"></script>
+
+  <script src="static/js/angular.min.js"></script>
+  <script src="static/js/angular-ui-router.js"></script>
+  <script src="static/js/angular-resource.js"></script>
+  <script src="static/js/angular-cookies.js"></script>
+  <script src="static/js/angular-cookies.min.js"></script>
+
+  <link href="static/js/AngularJS-Toaster/toaster.min.css" rel="stylesheet" />
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js" ></script>-->
+  <script src="static/js/angular-animate/angular-animate.js" ></script>
+  <script src="static/js/AngularJS-Toaster/toaster.min.js"></script>
+
 
   <script src="static/js/angular.min.js"></script>
   <script src="static/js/angular-route.js"></script>
