--- a/ui/seller/login_seller.html
+++ b/ui/seller/login_seller.html
@@ -1,19 +1,19 @@
 <div class="container">
     <section id="content">
         <form action="">
-            <h1>Login Form</h1>
+            <h1>Seller Login</h1>
             <br>
             <div>
-                <input type="text" placeholder="E-mail" required="" id="username" />
+                <input type="text" placeholder="E-mail" required="" id="username" ng-model="username"/>
             </div>
             <div>
-                <input type="password" placeholder="Password" required="" id="password" />
+                <input type="password" placeholder="Password" required="" id="password" ng-model="password" />
             </div>
             <div>
-                <input type="submit" value="Log in" />
+                <input type="button" ng-click="submit()" value="Login"/>
+                <input type="button" onclick="window.location.replace('#/AgriSenso')" value="Cancel"/>
                 <a href="#">Forgot your password?</a>
-                <a href="#">Sign up</a>
-                <a href="seller/index.html">dashboard</a>
+                <a href="#/seller/signup">Sign up</a>
             </div>
         </form><!-- form -->
     </section><!-- content -->
