--- a/ui/buyer/contacts/contacts.html
+++ b/ui/buyer/contacts/contacts.html
@@ -1,4 +1,4 @@
-<div ng-include src="'../buyer/home.html'"></div>
+<div ng-include src="'../buyer/navbar.html'"></div>
 <div class="col-md-2"></div>
 <div class="col-md-10">
     <div class="gap"></div>
@@ -15,7 +15,7 @@
     <div class="box">
 
         <!--<div class="box-header with-border">-->
-            <!--<a class="btn btn-default btn-mini btn btn-info" href="#/buyer/contacts/add">Add New</a>-->
+            <!--<a class="btn btn-default btn-mini btn btn-info" href="#/buyer/dashboard/contacts/add">Add New</a>-->
         <!--</div>-->
         <section class="content">
             <form ng-submit="addContact()" class="form">
@@ -57,7 +57,8 @@
                 <tr>
                     <th>Phone Number</th>
                     <th>First Name</th>
-                    <th>Surname</th>
+                    <th>Last Name</th>
+                    <th></th>
                     <th></th>
 
                 </tr>
@@ -68,7 +69,7 @@
                     <td>{{ contact.c_number}}</td>
                     <td>{{ contact.name }}</td>
                     <td>{{ contact.l_name }}</td>
-                    <td><a href="#/buyer/contacts/{{ contact.contact_id }}">Edit</a></td>
+                    <td><a href="#/buyer/dashboard/contacts/{{contact.contact_id}}">Edit</a></td>
                 </tr>
                 </tbody>
             </table>
