--- a/ui/buyer/navbar.html
+++ b/ui/buyer/navbar.html
@@ -45,23 +45,12 @@
                     </li>
                 </ul>
             </li>
-            <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Catherine Maglasang <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                    </li>
-                </ul>
+            <li>
+                <select class="dropdown-toggle"  onchange="location = this.value" style="font-size: 18px">
+                  <option data-effect="mfp-move-from-top" class="popup-text" >Catherine B. Maglasang</option>
+                  <option data-tokens="mustard" value="">Profile</option>
+                  <option data-tokens="mustard" value="#/buyer/logout">Logout</option>
+                </select>
             </li>
         </ul>
          </div>
