--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,6 @@
   <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="static/font-awesome/css/font-awesome.css">
 
-    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
@@ -34,7 +33,7 @@
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="static/dist/css/skins/_all-skins.min.css">
-  <link rel="stylesheet" href="static/css/seller.mystyle.css">
+  <!--<link rel="stylesheet" href="static/css/seller.mystyle.css">-->
 </head>
 <body>
   <toaster-container></toaster-container>
