--- a/ui/seller/contacts/contacts.html
+++ b/ui/seller/contacts/contacts.html
@@ -1,4 +1,4 @@
-<div ng-include src="'../seller/index.html'"></div>
+<div ng-include src="'../index.html'"></div>
 <div class="col-md-2"></div>
 <div class="col-md-10">
     <div class="gap"></div>
