--- a/ui/seller/index.html
+++ b/ui/seller/index.html
@@ -68,6 +68,7 @@
         </div>
 
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+
         <div class="collapse navbar-collapse navbar-ex1-collapse" ">
             <ul class="nav navbar-nav side-nav" style="background-color: #09375f;">
               
@@ -80,7 +81,7 @@
                     <a href="#/seller/dashboard/products"><i class="fa fa-plus nav_icon"></i> Products</a>
                 </li>
                 <li>
-                    <a href="#/seller/contacts"><i class="fa fa-plus nav_icon"></i> Contacts</a>
+                    <a href="#/seller/dashboard/contacts"><i class="fa fa-plus nav_icon"></i> Contacts</a>
                 </li>
             </ul>
         </div>
