--- a/ui/seller/products/addproduct.html
+++ b/ui/seller/products/addproduct.html
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Save">
-            <a href="#/dashboard/addproduct" class="btn btn-danger">Cancel</a>
+            <a href="#/seller/dashboard" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 </section>
