debug product feature for seller module

--- a/ui/buyer/navbar.html
+++ b/ui/buyer/navbar.html
@@ -45,8 +45,8 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                <select class="dropdown-toggle"  onchange="location = this.value" style="font-size: 18px">
+            <li class="dropdown">
+                <select class="dropdown-toggle"  onchange="location = this.value" style="font-size: 18px; padding: 10px; background: #1abc9c">
                   <option data-effect="mfp-move-from-top" class="popup-text" >Catherine B. Maglasang</option>
                   <option data-tokens="mustard" value="">Profile</option>
                   <option data-tokens="mustard" value="#/buyer/logout">Logout</option>
