--- a/ui/seller/index.html
+++ b/ui/seller/index.html
@@ -80,7 +80,7 @@
                     <a href="#/seller/dashboard/products"><i class="fa fa-plus nav_icon"></i> Products</a>
                 </li>
                 <li>
-                    <a href="#/seller/contacts"><i class="fa fa-plus nav_icon"></i> Contacts</a>
+                    <a href="#/seller/dashboard/contacts"><i class="fa fa-plus nav_icon"></i> Contacts</a>
                 </li>
             </ul>
         </div>
