--- a/ui/seller/products/products.html
+++ b/ui/seller/products/products.html
@@ -1,8 +1,7 @@
-<div ng-incude src="'../seller/index.html'"></div>
+<div ng-include src="'../../seller/index.html'"></div>
 <div class="col-md-2"></div>
-<div class="col-md-10"></div>
+<div class="col-md-10">
 <!-- <div class="sellercontainer" style="background-color: #4eb186;" > -->
-<div class="gap"></div>
 <section class="content-header" >
     <h1>
         Products
@@ -39,31 +38,31 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Action</label>
             <input type="submit" class="btn btn-primary" value="Save">
         </div>
     </form>
-</section>
-        <div class="gap"></div>
-        <!-- /.box-header -->
-        <div class="box-body">
-            <table class="table table-striped table-condensed table-hover">
-                <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Product Description</th>
-                    <th>Price</th>
-                    <th>Date Added</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="product in productList">
-                    <td>{{ product.product_name}}</td>
-                    <td>{{ product.description }}</td>
-                    <td>{{ product.price }}</td>
-                    <td>{{ product.date_added}}</td>
-                    <td><a href="#/dashboard/products/{{ product.product_id }}">Edit</a></td>
-               </tr>
-            </table>
-        </div>
-</section>
+    </section>
+            <div class="gap"></div>
+            <!-- /.box-header -->
+            <div class="box-body">
+                <table class="table table-striped table-condensed table-hover">
+                    <thead>
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Product Description</th>
+                        <th>Price</th>
+                        <th>Date Added</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="product in productList">
+                        <td>{{ product.product_name}}</td>
+                        <td>{{ product.description }}</td>
+                        <td>{{ product.price }}</td>
+                        <td>{{ product.date_added}}</td>
+                        <td><a href="#/dashboard/products/{{ product.product_id }}">Edit</a></td>
+                   </tr>
+                </table>
+            </div>
+    </section>
+</div>
